Resolves: tdf#152087 strip any newlines from the entry

Change-Id: I965ecd89c7edaf1a02d3f94df23f09c9e9490d54
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142896
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>